# nrfdfu_ng

./: .gitignore  Makefile  Makefile.am  README.md  ble.c  ble.h  configure.ac  dfu.c  dfu.h  example.c  libnrfdfu.c  libnrfdfu.h  libnrfdfu.la  manifest.c  manifest.h  nrfdfu.c  project.h  prototypes.h  util.c
bluez/: mainloop.c
